Fix spacing.

--- a/rufus-lang.org/src/Footer.css
+++ b/rufus-lang.org/src/Footer.css
@@ -5,5 +5,5 @@
 .Footer-footer {
   color: #aab7c4;
   font-size: 11pt;
-  margin: 60px 0 75px;
+  margin: 60px 20px 75px;
 }
